# riddle-me-this

./: .codacy.yaml  .factor12  .gitignore  .gitmodules  .sdkmanrc  .shellspec  ACKNOWLEDGMENTS.adoc  ATTRIBUTIONS.adoc  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING-HERE.adoc  CONTRIBUTING.adoc  LICENSE  Makefile  README.adoc  SECURITY-HERE.md  SECURITY.md  TEAM_NORMS.adoc  build.gradle.kts  gradle.properties  issue  pyproject.toml  qodana-failed.yaml  qodana.yaml  settings.gradle.kts  state.md
.claude/: settings.json
.conda/: about.md
.github/: dependabot.yml  labeler.yml  renovate.json5
.run/: Bootstrap ShellSpec.run.xml  Export Saga Issue Letter.run.xml  Export Saga Selected Issues Letter.run.xml  Jekyll Site - Build and Run.run.xml  Jekyll Site - Clean.run.xml  Jekyll Site - Install.run.xml  Jekyll Site Run.run.xml  Local Workflow Cache Prune.run.xml  Local Workflow Runs Prune.run.xml  Preview On-Engineering Rendition.run.xml  Python tests for blog.parametrize_links.test_article.TestArticleInvocation.run.xml  Python tests for blog.parametrize_links.test_article.TestArticleObject.run.xml  Resume.run.xml  Run ShellSpec.run.xml  Sync Attributes.run.xml  action update versions.run.xml  bash test - Workflow Cache Prune.run.xml  bash test - Workflow Runs Prune.run.xml  blog.parametrize_links.run.xml  pytest.run.xml  riddle-me-this PDF.run.xml  riddle-me-this-path [asciidoctorPdf].run.xml  riddle-me-this-path [processDependencyUpdates].run.xml  riddle-me-this-path [verifyJavaToolchain].run.xml  riddle-me-this.run.xml  (+3 more)
(+437 files in other folders)
